--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /mooc-2018-ohjelmointi/osa00-Osa00_00.Hiekkalaatikko/nbproject/private/
+/mooc-2018-ohjelmointi/osa00-Osa00_00.Hiekkalaatikko/build/
