--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,25 @@ hs_err_pid*
 /mooc-2018-ohjelmointi-nodl/osa01-Osa01_29.Summaaja/nbproject/private/
 /mooc-2018-ohjelmointi-nodl/osa01-Osa01_28.Uudestaan/nbproject/private/
 /mooc-2018-ohjelmointi-nodl/osa01-Osa01_30.Tykinkuula/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_01.AdaLovelace/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_02.HeiMaailma/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_03.Kuusi/build/
+/mooc-2018-ohjelmointi-nodl/osa00-Osa00_00.Hiekkalaatikko/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_04.MuuttuvatMuuttujat/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_05.SekunnitVuodessa/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_06.Yhteenlasku/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_07.Kertolasku/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_08.KolmenLuvunKeskiarvo/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_09.Nelilaskin/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_10.Jakolaskin/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_11.SyotetynLuvunTulostaja/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_12.KahdenLuvunSummaaja/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_13.KolmenLuvunSummaaja/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_14.Jakaja/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_16.Ylinopeussakko/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_15.YmpyranKehanPituus/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_17.Orwell/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_18.Wanha/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_19.PositiivinenLuku/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_20.TaysiIkaisyys/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_21.SuurempiTaiYhtasuuri/build/
