--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ hs_err_pid*
 /mooc-2018-ohjelmointi-nodl/osa01-Osa01_19.PositiivinenLuku/build/
 /mooc-2018-ohjelmointi-nodl/osa01-Osa01_20.TaysiIkaisyys/build/
 /mooc-2018-ohjelmointi-nodl/osa01-Osa01_21.SuurempiTaiYhtasuuri/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_22.ArvosanatJaPisteet/build/
