Completed Part 1 of Programming with Java 2018 University of Helsinki's MOOC

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,11 @@ hs_err_pid*
 /mooc-2018-ohjelmointi-nodl/osa01-Osa01_20.TaysiIkaisyys/build/
 /mooc-2018-ohjelmointi-nodl/osa01-Osa01_21.SuurempiTaiYhtasuuri/build/
 /mooc-2018-ohjelmointi-nodl/osa01-Osa01_22.ArvosanatJaPisteet/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_23.Maara/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_24.ParitonVaiParillinen/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_25.ReilutPitsabileet/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_26.IanTarkistus/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_27.Karkausvuosi/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_28.Uudestaan/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_29.Summaaja/build/
+/mooc-2018-ohjelmointi-nodl/osa01-Osa01_30.Tykinkuula/build/
