--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,40 @@ hs_err_pid*
 /mooc-2018-ohjelmointi-nodl/osa02-Osa02_18.PlaseerausOnEpatoivoista/nbproject/private/
 /mooc-2018-ohjelmointi-nodl/osa02-Osa02_26.Puisevaa/nbproject/private/
 /mooc-2018-ohjelmointi-nodl/osa02-Osa02_25.Numerovisa/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_01.PositiivisenLuvunLisaaminen/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_02.TyontekijanElakevakuutus/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_03.KolmenLuvunSumma/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_04.YhdestaSataan/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_05.SadastaYhteen/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_06.ParillisetLuvut/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_07.UseammanLuvunSumma/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_08.JuupasEipas/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_09.KelvollistenLukujenLukumaara/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_10.KelvollistenLukujenSumma/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_11.MarsinLampotilanKeskiarvo/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_12.Arvauspeli/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_13.VihjaavaArvauspeli/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_14.MihinJaMista/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_15.LukusarjanSumma/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_16.RajatunLukusarjanSumma/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_17.Kertoma/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_18.PlaseerausOnEpatoivoista/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_19.SilmukatLopetusMuistaminen/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_25.Numerovisa/build/
+/mooc-2018-ohjelmointi-nodl/osa02-Osa02_26.Puisevaa/build/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_05.TulostusKolmesti/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_06.OnkoTotta/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_07.Kayttajatunnukset/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_09.Salasana/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_14.TietynArvonTulostaminen/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_15.IndexOutOfBoundsException/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_17.EnsimmainenJaViimeinenArvo/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_19.Varasto/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_21.ListanSuurinLuku/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_22.ListanLukujenKeskiarvo/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_16.ListallaOlevienArvojenMaara/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_20.ListanLukujenSumma/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_18.LoytyykoListalta/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_23.KysytynLuvunIndeksi/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_25.Ajatustenlukija/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_24.PienimmanLuvunIndeksi/nbproject/private/
