--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,6 @@ hs_err_pid*
 /mooc-2018-ohjelmointi-nodl/osa03-Osa03_23.KysytynLuvunIndeksi/nbproject/private/
 /mooc-2018-ohjelmointi-nodl/osa03-Osa03_25.Ajatustenlukija/nbproject/private/
 /mooc-2018-ohjelmointi-nodl/osa03-Osa03_24.PienimmanLuvunIndeksi/nbproject/private/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_05.TulostusKolmesti/build/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_06.OnkoTotta/build/
+/mooc-2018-ohjelmointi-nodl/osa03-Osa03_07.Kayttajatunnukset/build/
